<resources>
    <string name="app_name">Archeology</string>
    <string name="action_settings">Settings</string>
    <string name="splash_title">Nice archeology app</string>
    <string name="not_from_facebook">not from facebook</string>
    <string name="sitelist_title">Site list</string>
    <string name="sitelist_preview_image">Site preview image</string>
    <string name="action_add">Add</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="edit_site_title">Edit site</string>
    <string name="new_site_title">New site</string>
    <string name="no_entries_found">No entries found.</string>
    <string name="site_title_hint">Title</string>
    <string name="site_description_hint">Description</string>
    <string name="site_image_description">Site image</string>
    <string name="site_image_add_description">Add image</string>
    <string name="site_image_add">Add image…</string>
    <string name="site_image_select">Select site image</string>
    <string name="menu_item_remove">Remove</string>
    <string name="site_image_options">Image options</string>
    <string name="menu_item_view_in_gallery">View in gallery</string>
    <string name="edit_location_title">Edit location</string>
    <string name="icon_description_location_marker">Location marker icon</string>
    <string name="latitude_value">Useless val 1 (lat): %f</string>
    <string name="longitude_value">Useless val 2 (lng): %f</string>
    <string name="untitled_site">Untitled Site</string>
    <string name="site_discard_confirm_message">Cancel editing? Unsaved changes will be lost.</string>
    <string name="continue_editing">Continue editing</string>
    <string name="discard">Discard</string>
    <string name="overline_images">Images</string>
    <string name="overline_general">General</string>
    <string name="overline_location">Location</string>
    <string name="missing_location_description">Missing location icon</string>
    <string name="no_location_set">No location set</string>
    <string name="click_to_change">Click to change…</string>
    <string name="unset_location">Unset location</string>
    <string name="overline_visit">Visit</string>
    <string name="not_yet_visited">Not yet visited</string>
    <string name="visited_value">Visited on %s</string>
    <string name="site_notes_hint">Notes</string>
    <string name="site_missing_title_message">You need to enter a title</string>
    <string name="string_location_visited">Location visited</string>
    <string name="settings">Settings</string>
    <string name="login_overline">Login</string>
    <string name="settings_password_hint">Enter new password…</string>
    <string name="settings_password_retype_hint">Retype password…</string>
    <string name="change_password">Change password</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="password_changed">Password successfully changed</string>
    <string name="password_must_not_be_empty">Password cannot be empty</string>
    <string name="stats_overline">Stats</string>
    <string name="total_sites">Total Sites</string>
    <string name="total_sites_icon_description">Total Sites icon</string>
    <string name="visited_sites_icon_description">Visited Sites icon</string>
    <string name="visited_sites">Visited Sites</string>
    <string name="login_title">Login</string>
    <string name="login_email_hint">E-Mail</string>
    <string name="login_password_hint">Password</string>
    <string name="login_required">Login required</string>
    <string name="splash_icon_description">Splash icon</string>
    <string name="register">Register</string>
    <string name="login">Log in</string>
    <string name="login_icon_description">Login icon</string>
    <string name="log_out">Log out</string>
    <string name="register_success">Registered successfully</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="unknown_email">Unknown email</string>
    <string name="password_change_error">Password could not be changed</string>
    <string name="enable_locating">Enable locating</string>
    <string name="disable_locating">Disable locating</string>
    <string name="drawer_open">Navigation drawer open</string>
    <string name="drawer_close">Navigation drawer closed</string>
    <string name="overview_map">Overview map</string>
    <string name="mark_as_favorite">Mark as favorite</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="favorite">Favorite</string>
    <string name="filter_for_favorites">Filter for favorites</string>
    <string name="disable_filter">Disable filter</string>
    <string name="share">Share</string>
    <string name="site_share_string">Visit site \"%s\" at lat %f and lng %f</string>
    <string name="site_share_string_unknown_loc">Visit site \"%s\" at unknown location</string>
    <string name="marked_as_favorite">Marked as favorite</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="started_location_finding">Started location finding</string>
    <string name="stopped_location_finding">Stopped location finding</string>
</resources>
