<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.site.SiteImageFragment">

    <ImageView
        android:id="@+id/siteImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/site_image_description"
        android:longClickable="true"
        android:visibility="gone"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <LinearLayout
        android:id="@+id/addLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:id="@+id/addImage"
            android:layout_width="64dp"
            android:layout_height="64dp"

            android:contentDescription="@string/site_image_add_description"
            app:srcCompat="@drawable/ic_add_a_photo_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/site_image_add"
            android:textAppearance="?attr/textAppearanceBody1" />

    </LinearLayout>

</FrameLayout>