<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_margin="8dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/previewImage"
            android:layout_width="80dp"
            android:layout_height="0dp"
            android:transitionName="image"
            android:contentDescription="@string/sitelist_preview_image"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <ImageView
            android:id="@+id/visitedBox"
            android:layout_width="wrap_content"
            android:layout_height="0dp"

            android:layout_marginEnd="8dp"

            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/string_location_visited"
            app:layout_constraintBottom_toBottomOf="@id/titleTextView"

            app:layout_constraintTop_toTopOf="@id/titleTextView"
            app:srcCompat="@drawable/ic_location_check_black_24dp" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"

            android:ellipsize="end"
            android:singleLine="true"
            android:text="Title of the site asdf asdfasfasfsdfasf fasdfasdfasdf sfsf"

            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintEnd_toStartOf="@id/visitedBox"
            app:layout_constraintStart_toEndOf="@id/previewImage"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/latitudeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="4dp"

            android:text="@string/latitude_value"
            app:layout_constraintEnd_toEndOf="@id/titleTextView"

            app:layout_constraintStart_toStartOf="@id/titleTextView"
            app:layout_constraintTop_toBottomOf="@id/titleTextView" />

        <TextView
            android:id="@+id/longitudeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/longitude_value"
            app:layout_constraintEnd_toEndOf="@id/titleTextView"

            app:layout_constraintStart_toStartOf="@id/titleTextView"
            app:layout_constraintTop_toBottomOf="@id/latitudeTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>