<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="presenter"
            type="de.mloy.archeology.ui.login.LoginPresenter" />


    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/loginRequiredIcon"

                    android:layout_width="64dp"
                    android:layout_height="64dp"

                    android:layout_marginTop="32dp"

                    android:contentDescription="@string/login_icon_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_key_black_24dp" />

                <TextView
                    android:id="@+id/loginRequiredView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="8dp"

                    android:gravity="center"
                    android:text="@string/login_required"

                    android:textAppearance="?attr/textAppearanceBody1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/loginRequiredIcon" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/loginRequiredView">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_email_hint"
                        android:inputType="textEmailAddress"
                        android:text="@={presenter.vm.email}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/emailLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_password_hint"
                        android:inputType="textPassword"
                        android:text="@={presenter.vm.password}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/registerButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:enabled="@{presenter.vm.canClick}"
                    android:onClick="@{() -> presenter.register()}"

                    android:text="@string/register"

                    app:layout_constraintEnd_toStartOf="@id/loginButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/passwordLayout" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginButton"
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:enabled="@{presenter.vm.canClick}"
                    android:onClick="@{() -> presenter.logIn()}"

                    android:text="@string/login"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/registerButton"
                    app:layout_constraintTop_toBottomOf="@id/passwordLayout" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>